# test1-restapi_service

./: .dockerignore  .env  .env.test  Dockerfile  README.md  alembic.ini  alembic_test.ini  docker-compose.yml  pyproject.toml
src/: config.py  database.py  main.py
src/api/: deposit.py
src/migrations/: env.py
src/models/: deposit.py
src/repositories/: base.py  deposit.py
src/schemas/: deposit.py
tests/: config_test.py  conftest.py  database_test.py  models_test.py  test_base.py  test_database.py  test_main.py  test_repositories_deposit.py  test_schemas_deposit.py
tests/migrations/: env.py
