[tool.poetry]
name = "test1-restapi-service"
version = "0.1.0"
description = ""
authors = ["nkriventsov <61682500+nkriventsov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
sqlalchemy = "^2.0.33"
uvicorn = "^0.30.6"
pydantic-settings = "^2.6.0"
asyncio = "^3.4.3"
alembic = "^1.13.3"
asyncpg = "^0.30.0"
black = "^24.10.0"
python-dateutil = "^2.9.0.post0"
pytest = "^8.3.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
